"about.recommend_yep" = "Recommend Yep";
"about.yep_description" = "Yep: A community where geniuses meet";
"doing%@" = " is %@";
"title.about" = "About";
"prompt.accept_friend_request_failed" = "Accept Friend Request failed!";
"button.accept" = "Accept";
"title.action" = "Action";
"title.add_friends" = "Add Friends";
"title.add_skills" = "Add Skills";
"button.add_skill_to_me" = "Add to Me";
"button.add" = "Add";
"prompt.added_skill%@_to_set%@_successfully" = "Added %1$@ to %2$@ successfully!";
"report.advertising" = "Advertising";
"title.albums" = "Albums";
"placeholder.all_messages_read" = "All messages read.";
"prompt.also_delete_this_feed" = "Also delete this feed?";
"title.available_friends" = "Available Friends";
"button.back" = "Back";
"info.begin_chat_just_now" = "Begin chat just now";
"title.block" = "Block";
"title.blocked_creators" = "Blocked Creators";
"title.blocked_users" = "Blocked Users";
"subtitle.build_world_together" = "Build world together";
"prompt.tap_next_agree_terms" = "By tapping Next you agree to our terms.";
"button.call_me" = "Call me";
"button.calling" = "Calling";
"title.camera" = "Camera";
"prompt.cancel_recommended_feed_failed" = "Cancel recommended feed failed!";
"cancel" = "Cancel";
"title.cancel_recommended" = "Cancel\nRecommended";
"title.change_mobile" = "Change Mobile";
"title.change_skills" = "Change Skills";
"title.change_it_now" = "Change It Now";
"prompt.channel" = "Channel:";
"title.chat_records" = "Chat Records";
"title.chat" = "Chat";
"title.chats" = "Chats";
"title.choose_photo" = "Choose Photo";
"title.choose_skill_set" = "Choose Skill Set";
"title.choose_source" = "Choose Source";
"button.choose_from_library" = "Choose from Library";
"prompt.choose" = "Choose...";
"title.clear_history" = "Clear History";
"confirm" = "Confirm";
"title.contacts" = "Contacts";
"title.create_username" = "Create a Username";
"prompt.create_feed_failed" = "Create feed failed!";
"prompt.create_username_failed" = "Create username failed!";
"title.create" = "Create";
"prompt.creators_of_blocked_feeds" = "Creators of Blocked Feeds";
"prompt.current_number" = "Current Number:";
"title.delete" = "Delete";
"prompt.did_not_get_it" = "Didn't get it?";
"prompt.disable_do_not_disturb_failed" = "Disable Do Not Disturb Failed!";
"show.discover_them" = "Discover them around you";
"title.discover" = "Discover";
"title.dismiss" = "Dismiss";
"title.do_not_disturb" = "Do Not Disturb";
"title.do_not_remind_me_in_this_version" = "Do not remind me in this version";
"prompt.ask_for_review" = "Do you like Yep?\nWould you like to review it on the App Store?";
"prompt.try_logout" = "Do you want to logout?";
"prompt.try_reject_friend_request" = "Do you want to reject this friend request?";
"prompt.try_unfriend_with_%@" = "Do you want to unfriend with %@?";
"title.done" = "Done";
"title.edit_profile" = "Edit Profile";
"prompt.enable_do_not_disturb_failed" = "Enable Do Not Disturb failed!";
"prompt.resend_audio_failed" = "Failed to resend audio!\nPlease make sure your device is connected to the Internet.";
"prompt.resend_image_failed" = "Failed to resend image!\nPlease make sure your device is connected to the Internet.";
"prompt.resend_location_failed" = "Failed to resend location!\nPlease make sure your device is connected to the Internet.";
"prompt.resend_text_failed" = "Failed to resend text!\nPlease make sure your device is connected to the Internet.";
"prompt.resend_video_failed" = "Failed to resend video!\nPlease make sure your device is connected to the Internet.";
"prompt.send_audio_failed" = "Failed to send audio!\nTry tap on message to resend.";
"prompt.send_image_failed" = "Failed to send image!\nTry tap on message to resend.";
"prompt.send_location_failed" = "Failed to send location!\nTry tap on message to resend.";
"prompt.send_text_failed" = "Failed to send text!\nTry tap on message to resend.";
"prompt.request_send_verification_code_failed" = "Failed to request send verification code!";
"prompt.send_video_failed" = "Failed to send video!\nTry tap on message to resend.";
"prompt.feed_can_only_has_x_photos" = "Feed can only has 4 photos.";
"prpmpt.feed_deleted_by_creator" = "Feed has been deleted by creator.";
"prompt.feed_info_too_long_%d" = "Feed info is too long!\nUp to %d letters.";
"prompt.feed_not_found" = "Feed not found!";
"title.clear_unread" = "Clear";
"title.feedback" = "Feedback";
"prompt.feeds_by_this_creator_will_not_appear" = "Feeds by this creator will remove from your timeline.";
"title.feeds" = "Feeds";
"error.fetch_failed" = "Fetch Failed!";
"prompt.fetching" = "Fetching";
"title.find_all" = "Find All";
"title.friends_in_contacts" = "Friends in Contacts";
"title.friends" = "Friends";
"share.from_yep" = "From Yep";
"share.from_yep_with_skills" = "From Yep, with Skills.";
"share.user_%@_from_yep_with_skills" = "%@, From Yep, with Skills.";
"time.from" = "From";
"show.genius" = "Genius";
"prompt.get_notified_with_subscribe" = "Get notified.";
"prompt.have_a_nice_day" = "Have a nice day!";
"title.hide_feeds_from_this_user" = "Hide his/her feeds";
"title.hide" = "Hide";
"prompt.hold_for_voice" = "Hold for Voice";
"prompt.create_username" = "In order to share your profile, create a unique username first.";
"prompt.input_verification_code" = "Input verification code sent to";
"prompt.input_blog_url" = "Input your blog's URL.";
"prompt.new_feed_placeholder" = "Introduce a thing, share an idea, describe a problem ...";
"prompt.user_intro_placeholder" = "Introduce yourself here.";
"title.self_introduction" = "Introduction";
"prompt.invalid_url" = "Invalid URL!";
"title.share_feed" = "Yep Feed";
"title.share_feed_with_description_%@" = "Yep Feed: %@";
"title.joined_feeds" = "Joined Feeds";
"prompt.last_seen_at_%@" = "Last seen %@";
"title.lately" = "Lately";
"title.location" = "Location";
"title.log_out" = "Log Out";
"title.login" = "Login";
"show.match_friends_with_skills" = "Match friends with your skills";
"title.match" = "Match";
"title.maybe_next_time" = "Maybe next time";
"title.meet_geniuses" = "Geniuses";
"show.meet" = "Meet";
"Messages" = "Messages";
"title.modify" = "Modify";
"title.mute" = "Mute";
"title.my_current_location" = "My Current Location";
"title.nearby" = "Nearby";
"prompt.network_connection_is_not_good" = "Network connection is not good!";
"title.new_feed" = "New Feed";
"title.new_voice" = "New Voice";
"button.next_step" = "Next";
"title.nickname" = "Nickname";
"prompt.no_blocked_feed_creators" = "No Blocked Creators.";
"prompt.no_feeds" = "No Feeds.";
"prompt.no_interviews" = "No Interviews.";
"prompt.no_self_introduction" = "No introduction yet.";
"prompt.no_blocked_users" = "No blocked users.";
"prompt.no_friends" = "No friends yet.\nTry discover or add some.";
"prompt.no_messages" = "No messages yet.";
"prompt.no_new_friends" = "No more new friends.";
"prompt.no_more_results" = "No more results.";
"prompt.no_search_results" = "No search results.";
"prompt.no_title_for_url" = "No title for URL!";
"prompt.no_username" = "No username";
"prompt.none" = "None";
"title.not_now" = "Not Now";
"title.notice" = "Notice";
"title.notifications_and_privacy" = "Notifications & Privacy";
"prompt.oauth_error" = "OAuth Error!";
"OAuth" = "OAuth";
"title.ok" = "OK";
"prompt.user_been_blocked" = "Oops! You've been blocked.";
"about.open_source_of_yep" = "Open Source of Yep";
"title.open_source" = "Open Source";
"title.other_reason" = "Other Reason";
"report.other" = "Other";
"prompt.people_with_this_skill" = "People with this skill";
"title.pick_location" = "Pick Location";
"title.pick_photos" = "Pick Photos";
"Pick a badge" = "Pick a badge";
"Pick some skills" = "Pick some skills";
"Picked Location" = "Picked Location";
"Please note that you can only set username once." = "Please note that you can only set username once.";
"Please wait while the audio is not ready!" = "Please wait while the audio is not ready!";
"Please wait while the image is not ready!" = "Please wait while the image is not ready!";
"Please wait while the video is not ready!" = "Please wait while the video is not ready!";
"Popular in " = "Popular in ";
"report.porno" = "Porno";
"button.post" = "Post";
"Preview" = "Preview";
"Profile" = "Profile";
"Push Notifications" = "Push Notifications";
"Review Yep on the App Store" = "Review Yep on the App Store";
"Recall" = "Recall";
"Recently Deleted" = "Recently Deleted";
"Recommend feed failed!" = "Recommend feed failed!";
"Recommend" = "Recommend";
"Recommended" = "Recommended";
"Reject Friend Request failed!" = "Reject Friend Request failed!";
"Reject" = "Reject";
"Release to Cancel" = "Release to Cancel";
"Release to Send" = "Release to Send";
"Relogin" = "Relogin";
"Reply" = "Reply";
"Report Reason" = "Report Reason";
"Report" = "Report";
"Resend audio?" = "Resend audio?";
"Resend image?" = "Resend image?";
"Resend location?" = "Resend location?";
"Resend text?" = "Resend text?";
"Resend video?" = "Resend video?";
"Resend" = "Resend";
"Retry" = "Retry";
"Review Yep" = "Review Yep";
"Review now" = "Review now";
"Say Hi" = "Say Hi";
"report.scams" = "Scams";
"Search Feeds" = "Search Feeds";
"Search Friend" = "Search Friend";
"Search User" = "Search User";
"Search feeds by user" = "Search feeds by user";
"Search feeds in channel" = "Search feeds in channel";
"Search" = "Search";
"Send Friend Request failed!" = "Send Friend Request failed!";
"Send Photos (%d)" = "Send Photos (%d)";
"Send" = "Send";
"Set Blog" = "Set Blog";
"Set Do Not Disturb failed!" = "Set Do Not Disturb failed!";
"Set Username" = "Set Username";
"Set an avatar" = "Set an avatar";
"Set badge failed!" = "Set badge failed!";
"Set blog failed!" = "Set blog failed!";
"Set username failed!" = "Set username failed!";
"Set" = "Set";
"Settings" = "Settings";
"Share location" = "Share location";
"Share this feed" = "Share this feed";
"Short Movie" = "Short Movie";
"Show More" = "Show More";
"Show Tab Bar Title" = "Show Tab Bar Title";
"Sign Up" = "Sign Up";
"Sorry" = "Sorry";
"Submit" = "Submit";
"Subscribe" = "Subscribe";
"Success" = "Success";
"Swipe Up to Cancel" = "Swipe Up to Cancel";
"Sync to Feeds" = "Sync to Feeds";
"Synced to Feeds" = "Synced to Feeds";
"Take Photo" = "Take Photo";
"Terms of Service" = "Terms of Service";
"Text & Photos" = "Text & Photos";
"Thanks! Your feedback has been recorded!" = "Thanks! Your feedback has been recorded!";
"Third Party" = "Third Party";
"This number (%@) not yet registered! Would you like to register it now?" = "This number (%@) not yet registered! Would you like to register it now?";
"This skill already in another learning skills set!" = "This skill already in another learning skills set!";
"This skill already in another master skills set!" = "This skill already in another master skills set!";
"Time" = "Time";
"To be continue." = "To be continue.";
"To" = "To";
"Try keywords" = "Try keywords";
"Unblock" = "Unblock";
"Unfriend failed!" = "Unfriend failed!";
"Unfriend" = "Unfriend";
"Unknown location" = "Unknown location";
"Unsubscribe" = "Unsubscribe";
"Update nickname failed!" = "Update nickname failed!";
"Update skill cover failed!" = "Update skill cover failed!";
"Upload Contacts" = "Upload Contacts";
"Upload failed!" = "Upload failed!";
"Upload skill cover failed!" = "Upload skill cover failed!";
"User authentication error, you need to login again!" = "User authentication error, you need to login again!";
"User not found!" = "User not found!";
"Username" = "Username";
"Users" = "Users";
"Version" = "Version";
"View profile" = "View profile";
"Voice recording time is too short!" = "Voice recording time is too short!";
"Voice" = "Voice";
"Wait too long, the operation may not be completed." = "Wait too long, the operation may not be completed.";
"We read every feedback" = "We read every feedback";
"WeChat Session" = "WeChat Session";
"WeChat Timeline" = "WeChat Timeline";
"Welcome contributions!" = "Welcome contributions!";
"What are you good at?" = "What are you good at?";
"What are you learning?" = "What are you learning?";
"What's your name?" = "What's your name?";
"What's your new number?" = "What's your new number?";
"What's your number?" = "What's your number?";
"Which skill set do you want %@ to be?" = "Which skill set do you want %@ to be?";
"Yep can not access your Camera Roll!\nBut you can change it in iOS Settings." = "Yep can not access your Camera Roll!\nBut you can change it in iOS Settings.";
"Yep can not access your Microphone!\nBut you can change it in iOS Settings." = "Yep can not access your Microphone!\nBut you can change it in iOS Settings.";
"Yep can not get your Location!\nBut you can change it in iOS Settings." = "Yep can not get your Location!\nBut you can change it in iOS Settings.";
"Yep can not open your Camera!\nBut you can change it in iOS Settings." = "Yep can not open your Camera!\nBut you can change it in iOS Settings.";
"Yep can not read your Contacts!\nBut you can change it in iOS Settings." = "Yep can not read your Contacts!\nBut you can change it in iOS Settings.";
"Yep can not save files!\nProbably not enough storage space." = "Yep can not save files!\nProbably not enough storage space.";
"Yep can't reach GitHub.\nWe blame GFW!" = "Yep can't reach GitHub.\nWe blame GFW!";
"Yep need to read your Contacts to continue this operation.\nIs that OK?" = "Yep need to read your Contacts to continue this operation.\nIs that OK?";
"Yep on GitHub" = "Yep on GitHub";
"Yep will match friends from your contacts for you." = "Yep will match friends from your contacts for you.";
"Yep! I'm %@." = "Yep! I'm %@.";
"Yep" = "Yep";
"Yes" = "Yes";
"You did not enter any nickname!" = "You did not enter any nickname!";
"You don't have any skills!\nWould you like to pick some?" = "You don't have any skills!\nWould you like to pick some?";
"You have been blocked by %@!" = "You have been blocked by %@!";
"You have blocked %@! Do you want to unblock him or her?" = "You have blocked %@! Do you want to unblock him or her?";
"You have entered an invalid URL!" = "You have entered an invalid URL!";
"You have no avatar! Please set up one first." = "You have no avatar! Please set up one first.";
"You have successfully updated your mobile for Yep! For now on, using the new number to login." = "You have successfully updated your mobile for Yep! For now on, using the new number to login.";
"You may meet different people and content depends on your skills" = "You may meet different people and content depends on your skills";
"[Deleted]" = "[Deleted]";
"[Mentioned you]" = "[Mentioned you]";
"countMessages%d" = "%d messages";
"is not your friend." = "is not your friend.";
"localityAndThoroughfare_%@_%@" = "%1$@, %2$@";
"nicknameWithTextContent_%@_%@" = "%1$@: %2$@";
"placeholder.audio" = "[Audio]";
"placeholder.image" = "[Image]";
"placeholder.location" = "[Location]";
"placeholder.socialWork" = "[Social Work]";
"placeholder.video" = "[Video]";
"recalledMessage%@" = "%@ recalled message";
"recording" = "recording";
"reject your last friend request." = "reject your last friend request.";
"terms" = "terms";
"try add you as friend." = "try add you as friend.";
"typing" = "typing";
"use letters, numbers, and underscore" = "use letters, numbers, and underscore";
"whosDribbble%@" = "%@'s Dribbble";
"whosGitHub%@" = "%@'s GitHub";
"whosInstagram%@" = "%@'s Instagram";
"prompt.uploading" = "Uploading";
"error.get_title_of_url_failed" = "Get title of URL failed!";
"title.master" = "Master";
"title.learning" = "Learning";
"title.match" = "Match";
"title.feed_discussion" = "Discussion";